--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,6 +1,3 @@
-<!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
-
 <!-- Setup Google Analytics -->
 {% include head-custom-google-analytics.html %}
 
@@ -8,5 +5,10 @@
 {% if site.favicon %}
   <link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
 {% endif %}
+
+<link rel="preload" href="/assets/img/wordcloud.svg" as="image">
+
+<!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css"> -->
 
 <!-- end custom head snippets -->
