--- a/_includes/links-mobile.html
+++ b/_includes/links-mobile.html
@@ -1,5 +1,5 @@
 <div class="link-wrapper-mobile" id="link-wrapper-mobile">
-    <style scoped>
+    <!-- <style scoped>
         #link-wrapper-mobile a {
         color:var(--clr-h1-and-bold);
         text-decoration:none;
@@ -8,9 +8,9 @@
         #link-wrapper-mobile a:hover, a:focus {
         color: var(--clr-a-text-hvr);
         }
-    </style>
+    </style> -->
     {%- for platform in site.sidebar %}
-    <nobr><a href="{{ platform.link }}" rel="me">{{ platform.icon }}&nbsp;{{ platform.name }}</a>
-    {%- unless forloop.last %}<span style="margin-left: 6px;"></span>{% endunless %}</nobr>
+    <nobr><a href="{{ platform.link }}" rel="me">{{ platform.name }}</a>
+    {%- unless forloop.last %} / {% endunless %}</nobr>
     {%- endfor %}
 </div>
