--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
     {% assign ColorScheme = site.color-scheme %}
 {% endcase %}
 
+{% assign assets_base_url = "https://cdn.jsdelivr.net/gh/BDHU/bdhu.github.io" %}
+{% assign theme_assets_base_url = "https://cdn.jsdelivr.net/gh/BDHU/minimalist" %}
+
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
@@ -16,10 +19,12 @@
     <link rel="stylesheet" href="{{ "/assets/css/colors-ColorScheme.css?v=" | replace: "ColorScheme", ColorScheme | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
 
-    <link rel="preload" href="{{site.logo | relative_url}}" as="image">
-    <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <![endif]-->
+    {% if site.cdn.jsdelivr.enabled %}
+      <link rel="preload" href="{{ assets_base_url }}{{ site.logo }}" as="image">
+    {% else %}
+      <link rel="preload" href="{{ site.logo | relative_url }}" as="image">
+    {% endif %}
+
     {% include head-custom.html %}
   </head>
   <body>
@@ -27,7 +32,11 @@
       <div class="sidebar">
         <header>
           {% if site.logo %}
-            <img class="img-circle" src="{{site.logo | relative_url}}" alt="Logo">
+            {% if site.cdn.jsdelivr.enabled %}
+              <img class="img-circle" src="{{ assets_base_url }}{{ site.logo }}" alt="Logo">
+            {% else %}
+              <img class="img-circle" src="{{ site.logo | relative_url }}" alt="Logo">
+            {% endif %}
           {% endif %}
 
           {% if site.blank_title %}
@@ -37,10 +46,11 @@
           {% endif %}
 
           {% if site.email %}
-            <p class="addr"><i class="fa-regular fa-envelope"></i>&nbsp;{{ site.email }}</p>
+            <p class="addr"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" style="vertical-align: -0.125em;" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><path d="m22 6l-10 7L2 6"/></g></svg>&nbsp;{{ site.email }}</p>
           {% endif %}
 
-          <p>{{ site.description | default: site.github.project_tagline }}</p>
+          <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
+          <p>Master's Student @ Chosun University CS Lab Interested In Computer Architecture</p>
 
           {% include sidebar.html %}
 
@@ -61,6 +71,10 @@
         {%- include footer.html -%}
       </footer>
     </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    {% if site.cdn.jsdelivr.enabled %}
+      <script src="{{ theme_assets_base_url }}{{ "/assets/js/scale.fix.min.js" }}"></script>
+    {% else %}
+      <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    {% endif %}
   </body>
 </html>
