--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,9 @@
           {% endif %}
 
           <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
-          <p>Master's Student @ Chosun University CS Lab Interested In Computer Architecture</p>
+          <p>Master's Student @ Computer Engineering Department</p>
+          <p>Research Asissistant @ CSLab</p>
+
 
           {% include sidebar.html %}
 
