--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,8 +50,7 @@
           {% endif %}
 
           <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
-          <p>Master's Student @ Computer Engineering Department</p>
-          <p>Research Asissistant @ CSLab</p>
+          <p>AI Research Asissistant @ CSLab</p>
 
 
           {% include sidebar.html %}
